add static adapter

--- a/.gitignore
+++ b/.gitignore
@@ -330,3 +330,4 @@ static/pico-main/scss/themes/default/_styles.scss
 static/pico-main/scss/themes/default/_theme-colors.scss
 static/pico-main/scss/utilities/_accessibility.scss
 static/pico-main/scss/utilities/_reduce-motion.scss
+caddy.exe
